updated the form

--- a/style.css
+++ b/style.css
@@ -1199,7 +1199,7 @@ p {
     content: "\f005\f005\f005\f005\f005";
     font-family: "Font Awesome 5 Pro";
     font-weight: 900;
-    color: blue;
+    color: #ffc954;
     letter-spacing: 4px;
 }
 
