--- a/style.css
+++ b/style.css
@@ -1239,6 +1239,11 @@ p {
 
 /* *************** */
 
+
+.blog-text p{
+    overflow: hidden;
+}
+
 .blog-text .h4-title {
     text-transform: capitalize;
     margin-bottom: 15px;
